--- a/who-we-are/index.html
+++ b/who-we-are/index.html
@@ -12,17 +12,17 @@ menuorder: 4
       <p class="fancy-pants-font lowercase"><strong>Who has the most&hellip;</strong></p>
       <div class="sort-btns">
         <a href="#" class="sort sort-btn" data-sort="coffees">Coffees a day</a>
-        <a href="#" class="sort sort-btn" data-sort="coffees">GitHub commits</a>
-        <a href="#" class="sort sort-btn" data-sort="coffees">Cats</a>
+        <a href="#" class="sort sort-btn" data-sort="commits">GitHub commits</a>
+        <a href="#" class="sort sort-btn" data-sort="cats">Cats</a>
       </div>
     </div>
 
-    <div id="js-mix-container" class="people-container">
+    <div class="people-container js-isotope">
 
       <!-- Abi -->
-      <div id="person-abi" class="person-wrap js-mix-element" data-coffees="1" data-commits="6" data-cats="2">
+      <div id="person-abi" class="person-wrap js-iso-element" data-coffees="1" data-commits="6" data-cats="2">
         <a href="#" class="person animation-trigger js-show-bio">
-          <img class="person-image" src="{{ "/img/people/abi.png" | prepend: site.baseurl }}" alt="Abi Little" />
+          <img class="person-image jiggle" src="{{ "/img/people/abi.png" | prepend: site.baseurl }}" alt="Abi Little" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
@@ -50,9 +50,9 @@ menuorder: 4
       </div> <!-- .person-wrap -->
 
       <!-- Andrew -->
-      <div id="person-andrew" class="person-wrap js-mix-element" data-coffees="8" data-commits="6" data-cats="2">
+      <div id="person-andrew" class="person-wrap js-mix-element" data-coffees="20" data-commits="6" data-cats="2">
         <a href="#" class="person animation-trigger js-show-bio">
-          <img class="person-image" src="{{ "/img/people/andrew.png" | prepend: site.baseurl }}" alt="Abi Little" />
+          <img class="person-image jiggle" src="{{ "/img/people/andrew.png" | prepend: site.baseurl }}" alt="Abi Little" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
@@ -80,9 +80,9 @@ menuorder: 4
       </div> <!-- .person-wrap -->
 
       <!-- Ed -->
-      <div id="person-ed" class="person-wrap js-mix-element" data-coffees="3" data-commits="6" data-cats="2">
+      <div id="person-ed" class="person-wrap js-mix-element" data-coffees="19" data-commits="6" data-cats="2">
         <a href="#" class="person animation-trigger js-show-bio">
-          <img class="person-image" src="{{ "/img/people/ed.png" | prepend: site.baseurl }}" alt="Abi Little" />
+          <img class="person-image jiggle" src="{{ "/img/people/ed.png" | prepend: site.baseurl }}" alt="Abi Little" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
@@ -110,9 +110,9 @@ menuorder: 4
       </div> <!-- .person-wrap -->
 
       <!-- Ersin -->
-      <div id="person-ersin" class="person-wrap js-mix-element" data-coffees="9" data-commits="6" data-cats="2">
+      <div id="person-ersin" class="person-wrap js-mix-element" data-coffees="18" data-commits="6" data-cats="2">
         <a href="#" class="person animation-trigger js-show-bio">
-          <img class="person-image" src="{{ "/img/people/ersin.png" | prepend: site.baseurl }}" alt="Abi Little" />
+          <img class="person-image jiggle" src="{{ "/img/people/ersin.png" | prepend: site.baseurl }}" alt="Abi Little" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
@@ -140,9 +140,9 @@ menuorder: 4
       </div> <!-- .person-wrap -->
 
       <!-- George -->
-      <div id="person-george" class="person-wrap js-mix-element" data-coffees="11" data-commits="6" data-cats="2">
+      <div id="person-george" class="person-wrap js-mix-element" data-coffees="17" data-commits="6" data-cats="2">
         <a href="#" class="person animation-trigger js-show-bio">
-          <img class="person-image" src="{{ "/img/people/george.png" | prepend: site.baseurl }}" alt="Abi Little" />
+          <img class="person-image jiggle" src="{{ "/img/people/george.png" | prepend: site.baseurl }}" alt="Abi Little" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
@@ -170,9 +170,9 @@ menuorder: 4
       </div> <!-- .person-wrap -->
 
       <!-- Jonathan -->
-      <div id="person-jonathan" class="person-wrap js-mix-element" data-coffees="1" data-commits="6" data-cats="2">
+      <div id="person-jonathan" class="person-wrap js-mix-element" data-coffees="16" data-commits="6" data-cats="2">
         <a href="#" class="person animation-trigger js-show-bio">
-          <img class="person-image" src="{{ "/img/people/jonathan.png" | prepend: site.baseurl }}" alt="Abi Little" />
+          <img class="person-image jiggle" src="{{ "/img/people/jonathan.png" | prepend: site.baseurl }}" alt="Abi Little" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
@@ -200,9 +200,9 @@ menuorder: 4
       </div> <!-- .person-wrap -->
 
       <!-- Julia -->
-      <div id="person-julia" class="person-wrap js-mix-element" data-coffees="1" data-commits="6" data-cats="2">
+      <div id="person-julia" class="person-wrap js-mix-element" data-coffees="15" data-commits="6" data-cats="2">
         <a href="#" class="person animation-trigger js-show-bio">
-          <img class="person-image" src="{{ "/img/people/julia.png" | prepend: site.baseurl }}" alt="Abi Little" />
+          <img class="person-image jiggle" src="{{ "/img/people/julia.png" | prepend: site.baseurl }}" alt="Abi Little" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
@@ -230,9 +230,9 @@ menuorder: 4
       </div> <!-- .person-wrap -->
 
       <!-- Lewis -->
-      <div id="person-lewis" class="person-wrap js-mix-element" data-coffees="1" data-commits="6" data-cats="2">
+      <div id="person-lewis" class="person-wrap js-mix-element" data-coffees="14" data-commits="6" data-cats="2">
         <a href="#" class="person animation-trigger js-show-bio">
-          <img class="person-image" src="{{ "/img/people/lewis.png" | prepend: site.baseurl }}" alt="Abi Little" />
+          <img class="person-image jiggle" src="{{ "/img/people/lewis.png" | prepend: site.baseurl }}" alt="Abi Little" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
@@ -260,9 +260,9 @@ menuorder: 4
       </div> <!-- .person-wrap -->
 
       <!-- Mark -->
-      <div id="person-mark" class="person-wrap js-mix-element" data-coffees="1" data-commits="6" data-cats="2">
+      <div id="person-mark" class="person-wrap js-mix-element" data-coffees="13" data-commits="6" data-cats="2">
         <a href="#" class="person animation-trigger js-show-bio">
-          <img class="person-image" src="{{ "/img/people/mark.png" | prepend: site.baseurl }}" alt="Abi Little" />
+          <img class="person-image jiggle" src="{{ "/img/people/mark.png" | prepend: site.baseurl }}" alt="Abi Little" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
@@ -290,9 +290,9 @@ menuorder: 4
       </div> <!-- .person-wrap -->
 
       <!-- Matt -->
-      <div id="person-matt" class="person-wrap js-mix-element" data-coffees="1" data-commits="6" data-cats="2">
+      <div id="person-matt" class="person-wrap js-mix-element" data-coffees="12" data-commits="6" data-cats="2">
         <a href="#" class="person animation-trigger js-show-bio">
-          <img class="person-image" src="{{ "/img/people/matt.png" | prepend: site.baseurl }}" alt="Abi Little" />
+          <img class="person-image jiggle" src="{{ "/img/people/matt.png" | prepend: site.baseurl }}" alt="Abi Little" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
@@ -320,9 +320,9 @@ menuorder: 4
       </div> <!-- .person-wrap -->
 
       <!-- Patrick -->
-      <div id="person-patrick" class="person-wrap js-mix-element" data-coffees="1" data-commits="6" data-cats="2">
+      <div id="person-patrick" class="person-wrap js-mix-element" data-coffees="11" data-commits="6" data-cats="2">
         <a href="#" class="person animation-trigger js-show-bio">
-          <img class="person-image" src="{{ "/img/people/patrick.png" | prepend: site.baseurl }}" alt="Abi Little" />
+          <img class="person-image jiggle" src="{{ "/img/people/patrick.png" | prepend: site.baseurl }}" alt="Abi Little" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
@@ -350,9 +350,9 @@ menuorder: 4
       </div> <!-- .person-wrap -->
 
       <!-- Pete -->
-      <div id="person-pete" class="person-wrap js-mix-element" data-coffees="1" data-commits="6" data-cats="2">
+      <div id="person-pete" class="person-wrap js-mix-element" data-coffees="10" data-commits="6" data-cats="2">
         <a href="#" class="person animation-trigger js-show-bio">
-          <img class="person-image" src="{{ "/img/people/pete.png" | prepend: site.baseurl }}" alt="Abi Little" />
+          <img class="person-image jiggle" src="{{ "/img/people/pete.png" | prepend: site.baseurl }}" alt="Abi Little" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
@@ -380,9 +380,9 @@ menuorder: 4
       </div> <!-- .person-wrap -->
 
       <!-- Richie -->
-      <div id="person-richie" class="person-wrap js-mix-element" data-coffees="1" data-commits="6" data-cats="2">
+      <div id="person-richie" class="person-wrap js-mix-element" data-coffees="9" data-commits="6" data-cats="2">
         <a href="#" class="person animation-trigger js-show-bio">
-          <img class="person-image" src="{{ "/img/people/richie.png" | prepend: site.baseurl }}" alt="Abi Little" />
+          <img class="person-image jiggle" src="{{ "/img/people/richie.png" | prepend: site.baseurl }}" alt="Abi Little" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
@@ -410,9 +410,9 @@ menuorder: 4
       </div> <!-- .person-wrap -->
 
       <!-- Sarah -->
-      <div id="person-sarah" class="person-wrap js-mix-element" data-coffees="1" data-commits="6" data-cats="2">
+      <div id="person-sarah" class="person-wrap js-mix-element" data-coffees="8" data-commits="6" data-cats="2">
         <a href="#" class="person animation-trigger js-show-bio">
-          <img class="person-image" src="{{ "/img/people/sarah.png" | prepend: site.baseurl }}" alt="Abi Little" />
+          <img class="person-image jiggle" src="{{ "/img/people/sarah.png" | prepend: site.baseurl }}" alt="Abi Little" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
@@ -440,9 +440,9 @@ menuorder: 4
       </div> <!-- .person-wrap -->
 
       <!-- Steve -->
-      <div id="person-steve" class="person-wrap js-mix-element" data-coffees="1" data-commits="6" data-cats="2">
+      <div id="person-steve" class="person-wrap js-mix-element" data-coffees="7" data-commits="6" data-cats="2">
         <a href="#" class="person animation-trigger js-show-bio">
-          <img class="person-image" src="{{ "/img/people/steve.png" | prepend: site.baseurl }}" alt="Abi Little" />
+          <img class="person-image jiggle" src="{{ "/img/people/steve.png" | prepend: site.baseurl }}" alt="Abi Little" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
@@ -470,9 +470,9 @@ menuorder: 4
       </div> <!-- .person-wrap -->
 
       <!-- Terri -->
-      <div id="person-terri" class="person-wrap js-mix-element" data-coffees="1" data-commits="6" data-cats="2">
+      <div id="person-terri" class="person-wrap js-mix-element" data-coffees="6" data-commits="6" data-cats="2">
         <a href="#" class="person animation-trigger js-show-bio">
-          <img class="person-image" src="{{ "/img/people/terri.png" | prepend: site.baseurl }}" alt="Abi Little" />
+          <img class="person-image jiggle" src="{{ "/img/people/terri.png" | prepend: site.baseurl }}" alt="Abi Little" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
