--- a/who-we-are/index.html
+++ b/who-we-are/index.html
@@ -19,11 +19,13 @@ menuorder: 4
 
     <div class="people-container js-isotope">
 
+      <div class="grid-sizer"></div>
+
       <!-- Abi -->
       <div id="person-abi" class="person-wrap js-iso-element" data-coffees="1" data-commits="6" data-cats="2">
-        <a href="#" class="person animation-trigger js-show-bio">
+        <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
-          <img class="person-image jiggle" src="{{ "/img/people/abi.png" | prepend: site.baseurl }}" alt="Abi Little" />
+          <img class="person-image" src="{{ "/img/people/abi.png" | prepend: site.baseurl }}" alt="Abi Little" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
@@ -51,10 +53,10 @@ menuorder: 4
       </div> <!-- .person-wrap -->
 
       <!-- Andrew -->
-      <div id="person-andrew" class="person-wrap js-mix-element" data-coffees="20" data-commits="6" data-cats="2">
-        <a href="#" class="person animation-trigger js-show-bio">
+      <div id="person-andrew" class="person-wrap js-iso-element" data-coffees="20" data-commits="6" data-cats="2">
+        <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
-          <img class="person-image jiggle" src="{{ "/img/people/andrew.png" | prepend: site.baseurl }}" alt="Abi Little" />
+          <img class="person-image" src="{{ "/img/people/andrew.png" | prepend: site.baseurl }}" alt="Abi Little" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
@@ -82,10 +84,10 @@ menuorder: 4
       </div> <!-- .person-wrap -->
 
       <!-- Ed -->
-      <div id="person-ed" class="person-wrap js-mix-element" data-coffees="19" data-commits="6" data-cats="2">
-        <a href="#" class="person animation-trigger js-show-bio">
+      <div id="person-ed" class="person-wrap js-iso-element" data-coffees="19" data-commits="6" data-cats="2">
+        <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
-          <img class="person-image jiggle" src="{{ "/img/people/ed.png" | prepend: site.baseurl }}" alt="Abi Little" />
+          <img class="person-image" src="{{ "/img/people/ed.png" | prepend: site.baseurl }}" alt="Abi Little" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
@@ -113,10 +115,10 @@ menuorder: 4
       </div> <!-- .person-wrap -->
 
       <!-- Ersin -->
-      <div id="person-ersin" class="person-wrap js-mix-element" data-coffees="18" data-commits="6" data-cats="2">
-        <a href="#" class="person animation-trigger js-show-bio">
+      <div id="person-ersin" class="person-wrap js-iso-element" data-coffees="18" data-commits="6" data-cats="2">
+        <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
-          <img class="person-image jiggle" src="{{ "/img/people/ersin.png" | prepend: site.baseurl }}" alt="Abi Little" />
+          <img class="person-image" src="{{ "/img/people/ersin.png" | prepend: site.baseurl }}" alt="Abi Little" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
@@ -144,10 +146,10 @@ menuorder: 4
       </div> <!-- .person-wrap -->
 
       <!-- George -->
-      <div id="person-george" class="person-wrap js-mix-element" data-coffees="17" data-commits="6" data-cats="2">
-        <a href="#" class="person animation-trigger js-show-bio">
+      <div id="person-george" class="person-wrap js-iso-element" data-coffees="17" data-commits="6" data-cats="2">
+        <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
-          <img class="person-image jiggle" src="{{ "/img/people/george.png" | prepend: site.baseurl }}" alt="Abi Little" />
+          <img class="person-image" src="{{ "/img/people/george.png" | prepend: site.baseurl }}" alt="Abi Little" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
@@ -175,10 +177,10 @@ menuorder: 4
       </div> <!-- .person-wrap -->
 
       <!-- Jonathan -->
-      <div id="person-jonathan" class="person-wrap js-mix-element" data-coffees="16" data-commits="6" data-cats="2">
-        <a href="#" class="person animation-trigger js-show-bio">
+      <div id="person-jonathan" class="person-wrap js-iso-element" data-coffees="16" data-commits="6" data-cats="2">
+        <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
-          <img class="person-image jiggle" src="{{ "/img/people/jonathan.png" | prepend: site.baseurl }}" alt="Abi Little" />
+          <img class="person-image" src="{{ "/img/people/jonathan.png" | prepend: site.baseurl }}" alt="Abi Little" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
@@ -206,10 +208,10 @@ menuorder: 4
       </div> <!-- .person-wrap -->
 
       <!-- Julia -->
-      <div id="person-julia" class="person-wrap js-mix-element" data-coffees="15" data-commits="6" data-cats="2">
-        <a href="#" class="person animation-trigger js-show-bio">
+      <div id="person-julia" class="person-wrap js-iso-element" data-coffees="15" data-commits="6" data-cats="2">
+        <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
-          <img class="person-image jiggle" src="{{ "/img/people/julia.png" | prepend: site.baseurl }}" alt="Abi Little" />
+          <img class="person-image" src="{{ "/img/people/julia.png" | prepend: site.baseurl }}" alt="Abi Little" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
@@ -237,10 +239,10 @@ menuorder: 4
       </div> <!-- .person-wrap -->
 
       <!-- Lewis -->
-      <div id="person-lewis" class="person-wrap js-mix-element" data-coffees="14" data-commits="6" data-cats="2">
-        <a href="#" class="person animation-trigger js-show-bio">
+      <div id="person-lewis" class="person-wrap js-iso-element" data-coffees="14" data-commits="6" data-cats="2">
+        <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
-          <img class="person-image jiggle" src="{{ "/img/people/lewis.png" | prepend: site.baseurl }}" alt="Abi Little" />
+          <img class="person-image" src="{{ "/img/people/lewis.png" | prepend: site.baseurl }}" alt="Abi Little" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
@@ -268,10 +270,10 @@ menuorder: 4
       </div> <!-- .person-wrap -->
 
       <!-- Mark -->
-      <div id="person-mark" class="person-wrap js-mix-element" data-coffees="13" data-commits="6" data-cats="2">
-        <a href="#" class="person animation-trigger js-show-bio">
+      <div id="person-mark" class="person-wrap js-iso-element" data-coffees="13" data-commits="6" data-cats="2">
+        <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
-          <img class="person-image jiggle" src="{{ "/img/people/mark.png" | prepend: site.baseurl }}" alt="Abi Little" />
+          <img class="person-image" src="{{ "/img/people/mark.png" | prepend: site.baseurl }}" alt="Abi Little" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
@@ -299,10 +301,10 @@ menuorder: 4
       </div> <!-- .person-wrap -->
 
       <!-- Matt -->
-      <div id="person-matt" class="person-wrap js-mix-element" data-coffees="12" data-commits="6" data-cats="2">
-        <a href="#" class="person animation-trigger js-show-bio">
+      <div id="person-matt" class="person-wrap js-iso-element" data-coffees="12" data-commits="6" data-cats="2">
+        <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
-          <img class="person-image jiggle" src="{{ "/img/people/matt.png" | prepend: site.baseurl }}" alt="Abi Little" />
+          <img class="person-image" src="{{ "/img/people/matt.png" | prepend: site.baseurl }}" alt="Abi Little" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
@@ -330,10 +332,10 @@ menuorder: 4
       </div> <!-- .person-wrap -->
 
       <!-- Patrick -->
-      <div id="person-patrick" class="person-wrap js-mix-element" data-coffees="11" data-commits="6" data-cats="2">
-        <a href="#" class="person animation-trigger js-show-bio">
+      <div id="person-patrick" class="person-wrap js-iso-element" data-coffees="11" data-commits="6" data-cats="2">
+        <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
-          <img class="person-image jiggle" src="{{ "/img/people/patrick.png" | prepend: site.baseurl }}" alt="Abi Little" />
+          <img class="person-image" src="{{ "/img/people/patrick.png" | prepend: site.baseurl }}" alt="Abi Little" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
@@ -361,10 +363,10 @@ menuorder: 4
       </div> <!-- .person-wrap -->
 
       <!-- Pete -->
-      <div id="person-pete" class="person-wrap js-mix-element" data-coffees="10" data-commits="6" data-cats="2">
-        <a href="#" class="person animation-trigger js-show-bio">
+      <div id="person-pete" class="person-wrap js-iso-element" data-coffees="10" data-commits="6" data-cats="2">
+        <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
-          <img class="person-image jiggle" src="{{ "/img/people/pete.png" | prepend: site.baseurl }}" alt="Abi Little" />
+          <img class="person-image" src="{{ "/img/people/pete.png" | prepend: site.baseurl }}" alt="Abi Little" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
@@ -392,10 +394,10 @@ menuorder: 4
       </div> <!-- .person-wrap -->
 
       <!-- Richie -->
-      <div id="person-richie" class="person-wrap js-mix-element" data-coffees="9" data-commits="6" data-cats="2">
-        <a href="#" class="person animation-trigger js-show-bio">
+      <div id="person-richie" class="person-wrap js-iso-element" data-coffees="9" data-commits="6" data-cats="2">
+        <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
-          <img class="person-image jiggle" src="{{ "/img/people/richie.png" | prepend: site.baseurl }}" alt="Abi Little" />
+          <img class="person-image" src="{{ "/img/people/richie.png" | prepend: site.baseurl }}" alt="Abi Little" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
@@ -423,10 +425,10 @@ menuorder: 4
       </div> <!-- .person-wrap -->
 
       <!-- Sarah -->
-      <div id="person-sarah" class="person-wrap js-mix-element" data-coffees="8" data-commits="6" data-cats="2">
-        <a href="#" class="person animation-trigger js-show-bio">
+      <div id="person-sarah" class="person-wrap js-iso-element" data-coffees="8" data-commits="6" data-cats="2">
+        <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
-          <img class="person-image jiggle" src="{{ "/img/people/sarah.png" | prepend: site.baseurl }}" alt="Abi Little" />
+          <img class="person-image" src="{{ "/img/people/sarah.png" | prepend: site.baseurl }}" alt="Abi Little" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
@@ -454,10 +456,10 @@ menuorder: 4
       </div> <!-- .person-wrap -->
 
       <!-- Steve -->
-      <div id="person-steve" class="person-wrap js-mix-element" data-coffees="7" data-commits="6" data-cats="2">
-        <a href="#" class="person animation-trigger js-show-bio">
+      <div id="person-steve" class="person-wrap js-iso-element" data-coffees="7" data-commits="6" data-cats="2">
+        <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
-          <img class="person-image jiggle" src="{{ "/img/people/steve.png" | prepend: site.baseurl }}" alt="Abi Little" />
+          <img class="person-image" src="{{ "/img/people/steve.png" | prepend: site.baseurl }}" alt="Abi Little" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
@@ -485,10 +487,10 @@ menuorder: 4
       </div> <!-- .person-wrap -->
 
       <!-- Terri -->
-      <div id="person-terri" class="person-wrap js-mix-element" data-coffees="6" data-commits="6" data-cats="2">
-        <a href="#" class="person animation-trigger js-show-bio">
+      <div id="person-terri" class="person-wrap js-iso-element" data-coffees="6" data-commits="6" data-cats="2">
+        <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
-          <img class="person-image jiggle" src="{{ "/img/people/terri.png" | prepend: site.baseurl }}" alt="Abi Little" />
+          <img class="person-image" src="{{ "/img/people/terri.png" | prepend: site.baseurl }}" alt="Abi Little" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
